Fixed element display on mobile

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -51,13 +51,19 @@ body {
 }
 
 .con {
-  margin: 3vw auto;
+  margin: 1vw auto;
+
+  @media only screen and (max-width: $bp-large) {
+    max-width: 100%;
+    margin: 0;
+    border-radius: 0;
+  }
 }
 
 .container {
   max-width: 120rem;
   min-height: 117rem;
-  margin-inline: auto;
+  margin: 1vw auto;
   background-color: #fff;
   border-radius: 9px;
   overflow: hidden;
